--- a/wp-content/themes/chuckguich/style.css
+++ b/wp-content/themes/chuckguich/style.css
@@ -1,6 +1,6 @@
 /* Styles généraux */
 body {
-    background-color: black;
+    background-color: rgb(235, 226, 226);
     color: silver;
     font-family: Arial, sans-serif;
     margin: 0;
@@ -42,6 +42,16 @@ footer {
     text-align: center;
     padding: 10px;
     width: 100%;
-    position: relative;
+    position: relative;  /* Position dans le flux normal du document */
+}
+.swiper {
+    width: 100%;
+    height: 400px;
+}
+
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
