Command Form, Caroussel, CTA

--- a/wp-content/themes/chuckguich/style.css
+++ b/wp-content/themes/chuckguich/style.css
@@ -54,4 +54,9 @@ footer {
     height: 100%;
     object-fit: cover;
 }
+.carousel-inner img {
+    max-height: 100px; /* Réduit la hauteur des images */
+    width: 50%; /* Ajuste la largeur */
+}
+
 
